# webapp-test-webworker

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
massfib/: Cargo.toml  Dioxus.toml  Makefile  README.md  build.rs
massfib/assets/js/: main.js  worker.js
massfib/resources/: fav_to_ico.sh
massfib/resources/android/assets/: loading.css  pre.html  stylesheet.css
massfib/resources/android/res/drawable/: background.xml  fav.xml
massfib/resources/android/res/mipmap-anydpi/: ic_launcher.xml
massfib/scripts/: android-webview-assets-params.toml  apk-icon-assemble-r.sh  wva-apk-icon-assemble-r.sh
massfib/src/: main.rs
massfib/src/components/: mod.rs
massfib/src/views/: home.rs  mod.rs
wasm-worker/: Cargo.toml  LICENSE_MIT  Makefile
wasm-worker/src/: lib.rs
